# pendulum_3d

./: CMakeLists.txt  README.md  package.xml  setup.py
cfg/: Pendulum.cfg
launch/: pendulum_3d.rviz  pendulum_3d_inv.rviz  pendulum_sim.launch  pendulum_sim_experiment.launch  pendulum_sim_inv.launch  pendulum_vis.launch
msg/: Score.msg
src/: balance_board_driver.py  keyboard_interface.cpp  pendulum_3d_simulator.py  pendulum_3d_simulator_corr.py  pendulum_3d_simulator_corr_inv.py  pendulum_3d_simulator_experiment.py
src/plot_scripts/: cost_calc.py  error_calc.py  plot.py  plot_3.py  trust_plot.py
urdf/: pendulum.urdf
