<?xml version="1.0"?>
<package>
  <name>pendulum_3d</name>
  <version>0.0.1</version>
  <description>
     Interactive demo of a 3D inverted pendulum, controllable by rgb-d camera
  </description>

  <maintainer email="mderry@gmail.com">Matt Derry</maintainer>
  <author email="mderry@gmail.com">Matt Derry</author>
  <license>BSD</license>

  <!--Dependencies-->
  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>roscpp</build_depend>
  <build_depend>roslib</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>std_srvs</build_depend>
  <build_depend>tf</build_depend>
  <build_depend>dynamic_reconfigure</build_depend>

  <run_depend>roscpp</run_depend>
  <run_depend>roslib</run_depend>
  <run_depend>rospy</run_depend>
  <run_depend>geometry_msgs</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>sensor_msgs</run_depend>
  <run_depend>std_srvs</run_depend>
  <run_depend>tf</run_depend>
  <run_depend>dynamic_reconfigure</run_depend>

</package>


